@@ -65,4 +65,5 @@ debian/tmp/usr/lib/pkgconfig/dotnet35.pc
 debian/tmp/usr/lib/pkgconfig/mono-lineeditor.pc
 debian/tmp/usr/lib/pkgconfig/mono-options.pc
 debian/tmp/usr/share/locale/*/LC_MESSAGES/mcs.mo
-debian/mono-api-check /usr/bin/
+debian/mono-api-check		/usr/bin/
+debian/mono-api-diff.exe	/usr/lib/mono/2.0/
